# index.route.js
@@ -1,12 +1,9 @@
 const express = require('express');
 const userRoutes = require('./server/user/user.route');
 const authRoutes = require('./server/auth/auth.route');
-const categoryRoutes = require('./server/categories/categories.route');
 const postRoutes = require('./server/posts/posts.route');
-const sizesRoutes = require('./server/sizes/sizes.route');
 const favouritesRoutes = require('./server/favourites/favourites.route');
 const commentsRoutes = require('./server/comments/comments.route');
-const citiesRoutes = require('./server/cities/cities.route');
 const slidersRoutes = require('./server/sliders/sliders.route');
 const testRoutes = require('./server/testImages/test.route');
 //Swagger
@@ -27,12 +24,9 @@ router.get('/adem', (req, res) =>
 // mount user routes at /users
 router.use('/users', userRoutes);
 router.use('/auth', authRoutes);
-router.use('/categories', categoryRoutes);
 router.use('/posts', postRoutes);
-router.use('/sizes', sizesRoutes);
 router.use('/favourites', favouritesRoutes);
 router.use('/comments', commentsRoutes);
-router.use('/cities', citiesRoutes);
 router.use('/sliders', slidersRoutes);
 router.use('/test', testRoutes);
 
