# swagger.json
@@ -9,7 +9,7 @@
             "url": "https://opensource.org/licenses/MIT"
         }
     },
-    "host": "localhost:5000",
+    "host": "localhost:4040",
     "basePath": "/api",
     "tags": [
         {
@@ -94,298 +94,6 @@
                             "type": "object",
                             "$ref": "#/definitions/login/success"
                         }
-                    }
-                }
-            }
-        },
-        "/categories": {
-            "get": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "GET all Categories",
-                "description": "",
-                "operationId": "getAllCategories",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "POST one Category",
-                "description": "",
-                "operationId": "postCategory",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Category object that needs to be added to the store",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/category/post"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/categories/{categoryId}": {
-            "get": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "GET one Category",
-                "description": "",
-                "operationId": "getOneCategories",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "categoryId",
-                        "in": "path",
-                        "description": "ID of category to return",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "Update one Category",
-                "description": "",
-                "operationId": "putOneCategories",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "categoryId",
-                        "in": "path",
-                        "description": "ID of category to return",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Category object that needs to update.",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/category/post"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "DELETE one Category",
-                "description": "",
-                "operationId": "deleteOneCategories",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "categoryId",
-                        "in": "path",
-                        "description": "ID of category to return",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/cities": {
-            "get": {
-                "tags": [
-                    "Cities"
-                ],
-                "summary": "GET all Cities",
-                "description": "",
-                "operationId": "getAllCities",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Cities"
-                ],
-                "summary": "POST one City",
-                "description": "",
-                "operationId": "postCity",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "City object that needs to be added to the store",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/city/post"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/cities/{cityId}": {
-            "get": {
-                "tags": [
-                    "Cities"
-                ],
-                "summary": "GET one City",
-                "description": "",
-                "operationId": "getOneCity",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "cityId",
-                        "in": "path",
-                        "description": "ID of city to return",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Cities"
-                ],
-                "summary": "Update one City",
-                "description": "",
-                "operationId": "putOneCity",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "cityId",
-                        "in": "path",
-                        "description": "ID of category to return",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "City object that needs to update.",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/city/post"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Cities"
-                ],
-                "summary": "DELETE one City",
-                "description": "",
-                "operationId": "deleteOneCity",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "cityId",
-                        "in": "path",
-                        "description": "ID of city to return",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
                     }
                 }
             }
@@ -1030,152 +738,6 @@
                         "name": "categoryId",
                         "in": "path",
                         "description": "ID of category to return",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/sizes": {
-            "get": {
-                "tags": [
-                    "Sizes"
-                ],
-                "summary": "GET all Sizes",
-                "description": "",
-                "operationId": "getAllSizes",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Sizes"
-                ],
-                "summary": "POST one Size",
-                "description": "",
-                "operationId": "postSize",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Size object that needs to be added to the store",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/sizes/post"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/sizes/{sizeId}": {
-            "get": {
-                "tags": [
-                    "Sizes"
-                ],
-                "summary": "GET one Size",
-                "description": "",
-                "operationId": "getOneSize",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "sizeId",
-                        "in": "path",
-                        "description": "ID of size to return",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Sizes"
-                ],
-                "summary": "Update one Size",
-                "description": "",
-                "operationId": "putOneSize",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "sizeId",
-                        "in": "path",
-                        "description": "ID of size to return",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Size object that needs to update.",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/sizes/post"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Sizes"
-                ],
-                "summary": "DELETE one Size",
-                "description": "",
-                "operationId": "deleteOneSize",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "sizeId",
-                        "in": "path",
-                        "description": "ID of size to return",
                         "required": true,
                         "type": "string"
                     }
